--- a/packages/youtube_player_flutter/pubspec.yaml
+++ b/packages/youtube_player_flutter/pubspec.yaml
@@ -1,6 +1,6 @@
 name: youtube_player_flutter
 description: Flutter plugin for playing or streaming inline YouTube videos using the official iFrame player API. This plugin supports both Android and iOS.
-version: 7.0.0+7
+version: 7.0.0+8
 repository: https://github.com/sarbagyastha/youtube_player_flutter
 homepage: https://github.com/sarbagyastha/youtube_player_flutter/tree/master/packages/youtube_player_flutter
 
@@ -11,7 +11,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_inappwebview: '>=4.0.0 <5.0.0'
+  flutter_inappwebview: 
+    git:
+      url: git://github.com/mecidr/flutter_inappwebview.git
+      ref: mecidr-patch-ios14.5
 
 dev_dependencies:
   flutter_test:
